Added - Paths to tsconfig for models

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,11 @@
     "strict": true,
     "allowImportingTsExtensions": true,
     "allowJs": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "#models": ["models/index.ts"],
+      "#models/*": ["models/*"]
+    }
   }
 }
