Updated - tsconfig now has #hooks added to paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,9 @@
     "baseUrl": ".",
     "paths": {
       "#models": ["models/index.ts"],
-      "#models/*": ["models/*"]
+      "#models/*": ["models/*"],
+      "#hooks": ["hooks/index.ts"],
+      "#hooks/*": ["hooks/*"],
     }
   }
 }
